--- a/src/Assets/NavLeft/NavLeft.css
+++ b/src/Assets/NavLeft/NavLeft.css
@@ -5,8 +5,10 @@
   flex-wrap: wrap;
   position: relative;
   align-items: center;
-  justify-content: center;
   height: 4%;
+  text-align: start;
+  
+  justify-content: center;
   margin: 10% auto;
   border-radius: 10px;
   /* background-color: 	#353839; */
@@ -15,10 +17,12 @@
 a{
   font-size: 3vh;
 }
+.icon1{
+  margin-right: 5%;
+  width: 30%;
+}
 .navLeftContainer:hover {
   color: white;
-  box-shadow: 0px 0px 2px 1px rgb(0, 0, 0);
-
   width: 80%;
   display: flex;
   flex-wrap: wrap;
