--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -31,11 +31,15 @@ position: absolute;
 }
 
 .type-wrap {
+    overflow: hidden;
     color: black;
     user-select: none;
     font-size: 50px;
     padding: 20px;
+    width: 100%;
+    height: 150px;
 }
+
 
 /* the above is for styling puposes only */
 
@@ -47,6 +51,13 @@ position: absolute;
     -webkit-animation: blink 0.7s infinite;
     -moz-animation: blink 0.7s infinite;
     animation: blink 0.7s infinite;
+}
+
+.work{
+    position: absolute;
+    width: 15%;
+    left: 11%;
+    bottom: 0px;
 }
 
 @keyframes blink {
