--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,120 @@
   display: flex;
 }
 
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  .navLeft {
+    position: relative;
+    width: 13%;
+    height: 100%;
+    background-color: rgb(51, 46, 46);
+    
+    justify-content: start;
+  }
+  
+  .profile {
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: flex-end;
+    position: relative;
+  }
+  
+  .profileName {
+    font-size: 2vh;
+    font-weight: bold;
+    color:white;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.407);
+    padding: 5px;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+  }
+  
+  .navRight {
+    color: aliceblue;
+    width: 90%;
+    background-color: rgb(232, 0, 0);
+    overflow-y: auto;
+    transition: transform 1s ease;
+    &.zoomOut {
+      transform: scale(0.97);
+    }
+  }
+  
+  .animationIcon{
+    width: 40%;
+    height: auto;
+  }
+      
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+  .navLeft {
+    position: relative;
+    width: 13%;
+    height: 100%;
+    background-color: rgb(51, 46, 46);
+    
+    justify-content: start;
+  }
+  
+  .profile {
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: flex-end;
+    position: relative;
+  }
+  
+  .profileName {
+    font-size: 2vh;
+    font-weight: bold;
+    color:white;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.407);
+    padding: 5px;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+  }
+  
+  .navRight {
+    color: aliceblue;
+    width: 90%;
+    background-color: rgb(232, 0, 0);
+    overflow-y: auto;
+    transition: transform 1s ease;
+    &.zoomOut {
+      transform: scale(0.97);
+    }
+  }
+  
+  .animationIcon{
+    width: 40%;
+    height: auto;
+  }
+  
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  
 .navLeft {
   position: relative;
   width: 13%;
@@ -61,6 +175,112 @@
   height: auto;
 }
 
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  
+.navLeft {
+  position: relative;
+  width: 13%;
+  height: 100%;
+  background-color: rgb(51, 46, 46);
+  
+  justify-content: start;
+}
 
+.profile {
+  border-radius: 0 0 10px 10px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: flex-end;
+  position: relative;
+}
 
+.profileName {
+  font-size: 2vh;
+  font-weight: bold;
+  color:white;
+  user-select: none;
+  background-color: rgba(0, 0, 0, 0.407);
+  padding: 5px;
+  text-align: center;
+  border-radius: 0 0 10px 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
 
+.navRight {
+  color: aliceblue;
+  width: 90%;
+  background-color: rgb(232, 0, 0);
+  overflow-y: auto;
+  transition: transform 1s ease;
+  &.zoomOut {
+    transform: scale(0.97);
+  }
+}
+
+.animationIcon{
+  width: 40%;
+  height: auto;
+}
+
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  
+.navLeft {
+  position: relative;
+  width: 13%;
+  height: 100%;
+  background-color: rgb(51, 46, 46);
+  
+  justify-content: start;
+}
+
+.profile {
+  border-radius: 0 0 10px 10px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.profileName {
+  font-size: 2vh;
+  font-weight: bold;
+  color:white;
+  user-select: none;
+  background-color: rgba(0, 0, 0, 0.407);
+  padding: 5px;
+  text-align: center;
+  border-radius: 0 0 10px 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.navRight {
+  color: aliceblue;
+  width: 90%;
+  background-color: rgb(232, 0, 0);
+  overflow-y: auto;
+  transition: transform 1s ease;
+  &.zoomOut {
+    transform: scale(0.97);
+  }
+}
+
+.animationIcon{
+  width: 40%;
+  height: auto;
+}
+
+}
