--- a/src/Component/Resume/line.css
+++ b/src/Component/Resume/line.css
@@ -6,7 +6,6 @@
     justify-content: center;
     position: relative;
 
-    /* position: absolute; */
 }
 .lines{
     background-color: aliceblue;
@@ -15,6 +14,7 @@
 }
 .circlesTop{
     top: 0;
+    background-color: blue;
     position: absolute;
     border: 2px solid white;
     border-radius: 100%;
@@ -53,7 +53,6 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    /* text-align: ; */
     width: 400px;
     font-family: 'Times New Roman', Times, serif;
     height: auto;
@@ -68,11 +67,11 @@
 }
 .startYear{
     position: absolute;
-    top: -10%;
-    left: -400%; 
+    top: -4px;
+    left: -55px; 
 }
 .endYear{
     position: absolute;
-    bottom: -10%;
-    left: -400%;  
+    bottom: -4px;
+    left: -55px;  
 }
