--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0px;
   user-select: none;
-  cursor: url(cos.png),auto;
+  cursor: url(cos12.png),auto;
 
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   user-drag: none; /* Standard syntax */
@@ -19,15 +19,7 @@
   height: 100vh;
   display: flex;
 }
-.mouser{
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  cursor: url(cuso.png),auto;
-  
-}
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
