--- a/src/Component/Project/music/music.module.css
+++ b/src/Component/Project/music/music.module.css
@@ -34,7 +34,7 @@
   border-radius: 30px 0px 0px 0px;
   width: 100%;
   height: 10%;
-  background-color: yellowgreen;
+  background-color: rgb(171, 183, 148);
   top: 0;
 }
 
@@ -60,7 +60,7 @@
   width: 100%;
   bottom: 0;
   height: 25%;
-  background-color: yellow;
+  background-color: rgb(60, 60, 52);
   border-radius: 0px 0px 0px 30px;
 
 }
@@ -152,7 +152,7 @@
   position: relative;
   width: 100%;
   height: 40%;
-  background-color: springgreen;
+  background-color: rgb(48, 62, 55);
 }
 
 .musicRight .trandings {
@@ -168,14 +168,14 @@
   height: 30%;
   position: absolute;
   right: 0;
-  background-color: salmon;
+  background-color: rgb(44, 29, 27);
 }
 
 .musicRight .bottomPlayList {
   position: absolute;
   width: 100%;
   height: 15%;
-  background-color: orange;
+  background-color: rgb(33, 26, 13);
   bottom: 0;
   display: flex;
   flex-wrap: wrap;
@@ -187,13 +187,13 @@
 .bottomPlayList .currentPlay {
   width: 25%;
   height: 100%;
-  background-color: pink;
+  background-color: rgb(103, 72, 77);
 }
 
 .bottomPlayList .currentControls {
   width: 30%;
   height: 100%;
-  background-color: royalblue;
+  background-color: rgb(25, 28, 39);
   position: absolute;
   left: 35%;
 }
@@ -203,7 +203,7 @@
   right: 0;
   width: 30%;
   height: 100%;
-  background-color: papayawhip;
+  background-color: rgb(83, 68, 45);
   border-radius: 0 0 30px 0;
 }
 
