--- a/src/Component/Project/music/music.module.css
+++ b/src/Component/Project/music/music.module.css
@@ -119,7 +119,7 @@
 .headder .profile {
   right: 0;
   border-radius: 0px 30px 0 0;
-  background-color: violet;
+  background-color: rgb(142, 63, 142);
   height: 100%;
   width: 40%;
 }
@@ -131,7 +131,7 @@
   top: 25%;
   right: 5%;
   border-radius: 50px;
-  background-color: rgb(46, 65, 83);
+  background-color: rgb(75, 97, 118);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -155,6 +155,116 @@
   background-color: rgb(48, 62, 55);
 }
 
+.searchDetails {
+  position: relative;
+  width: 100%;
+  height: 72.3dvh;
+  /* background: rgb(2,0,36);
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%); */
+  background: linear-gradient(-45deg, #95ada1, #7e8a87, #526b60, #275f44);
+  background-size: 400% 400%;
+  animation: searchdetails 15s ease infinite;
+  z-index: 1;
+  overflow: scroll;
+  border-radius: 0 0 30px 0;
+
+}
+
+@keyframes searchdetails {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.gridContainer {
+  position: relative;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-image: url("../../.././../public/song.jpg");
+  background-size: 100% 100%;
+  /* justify-content: center; */
+}
+
+.gridLeft {
+  overflow: scroll;
+  position: absolute;
+  left: 0;
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+.gridRight {
+  position: absolute;
+  right: 0;
+  width: 30%;
+  background-color: rgba(183, 255, 0, 0.35);
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+.gridRightBottom {
+  background-color: rgba(0, 255, 128, 0.366);
+  width: 100%;
+  height: 20%;
+  bottom: 0;
+  position: absolute;
+  overflow: hidden;
+}
+
+.gridColumn {
+  flex: 1;
+}
+
+
+.searchImages {
+  width: 11dvw;
+  height: 100dvh;
+  height: auto;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px 3px rgb(0, 0, 0);
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+
+  /* box-shadow:0px 0px 2px 10px fade(#fff,80%); */
+  /* background-color: rgb(39, 45, 26); */
+}
+
+
+.searchImages:hover {
+  width: 11dvw;
+  height: 100dvh;
+  height: auto;
+  margin: 10px;
+  border-radius: 50%;
+  background: transparent;
+  /* border: 1px solid white; */
+  /* box-shadow: inset 0px 0px 20px black; */
+  transition: transform 2s;
+  transform: scale(1.05);
+  /* transform: scale(2); */
+}
+
+
+
+
 .musicRight .trandings {
   background-color: sandybrown;
   width: 50%;
@@ -166,6 +276,7 @@
 .musicRight .topPlaylist {
   width: 50%;
   height: 30%;
+  overflow: scroll;
   position: absolute;
   right: 0;
   background-color: rgb(44, 29, 27);
