--- a/src/Component/Project/music/music.module.css
+++ b/src/Component/Project/music/music.module.css
@@ -324,13 +324,16 @@
 
 .currentText {
   display: flex;
+  overflow: scroll;
   flex-wrap: wrap;
   align-content: center;
   align-items: center;
   position: absolute;
   right: 0;
-  font-size: 1.3rem;
+  text-align: justify;
+  /* font-size: 1.1rem; */
   width: 50%;
+  margin-right: 5px;
   height: 50%;
   display: flex;
   flex-wrap: wrap;
@@ -338,13 +341,14 @@
 }
 
 .currentAudio {
+  overflow: scroll;
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
   width: 100%;
   bottom: 0;
   height: 50%;
   background-color: tomato;
-  display: flex;
-  flex-wrap: wrap;
   align-content: center;
   align-items: center;
   justify-content: center;
